--- a/action.yaml
+++ b/action.yaml
@@ -4,6 +4,10 @@ inputs:
   registry_url:
     description: 'The registry url'
     required: true
+  additional_registry_url:
+    description: 'The registry url'
+    required: false
+    default: ''
   repository_name:
     description: 'The registry repository name'
     required: true
@@ -45,6 +49,14 @@ runs:
       uses: docker/login-action@v1
       with:
         registry: ${{ inputs.registry_url }}
+        username: oauth2accesstoken
+        password: ${{ steps.auth.outputs.access_token }}
+
+    - name: Login to additional GCR
+      if: inputs.additional_registry_url != ''
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ inputs.additional_registry_url }}
         username: oauth2accesstoken
         password: ${{ steps.auth.outputs.access_token }}
 
